--- a/src/modules/BigHeadline.module.scss
+++ b/src/modules/BigHeadline.module.scss
@@ -2,10 +2,14 @@
 @import '../style/modules';
 
 .root {
-  @include module();
-  @include module-spacing-1();
+  @include module('big-headline');
+  @include module-spacing-2();
 
   width: 100%;
+
+  &:first-of-type {
+    @include module-spacing-3();
+  }
 }
 
 .big-headline {
