--- a/src/modules/HeadlineIntro.module.scss
+++ b/src/modules/HeadlineIntro.module.scss
@@ -128,8 +128,7 @@
   @include missing-hover();
   @include t-Oscar_Regular_18_White();
 
-  right: 0;
-  bottom: 0;
+  top: 100%;
   display: none;
   border: 1px solid;
   border-radius: 50%;
@@ -141,6 +140,7 @@
   align-items: center;
   justify-content: center;
   padding: 0 15px;
+  right: calc(var(--bs-gutter-x) * 0.5);
 
   @include media-breakpoint-up(sm) {
     display: flex;
